set backup user as default user for other mysql clients

--- a/mariadb/compose/conf/credentials.cnf
+++ b/mariadb/compose/conf/credentials.cnf
@@ -8,3 +8,15 @@ password        = 'Mt2(8eH5232Nb$3dw8s'
 [mysqldump]
 user            = backup
 password        = 'Mt2(8eH5232Nb$3dw8s'
+
+[mysql]
+user            = backup
+password        = 'Mt2(8eH5232Nb$3dw8s'
+
+[mysqladmin]
+user            = backup
+password        = 'Mt2(8eH5232Nb$3dw8s'
+
+[client]
+user            = backup
+password        = 'Mt2(8eH5232Nb$3dw8s'
