--- a/mariadb/compose/docker-compose.recover.yaml
+++ b/mariadb/compose/docker-compose.recover.yaml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-  mariadb-server:
+  nextcloud-mariadb:
     command:
       - --wsrep_cluster_address=gcomm://
       - --wsrep_recover
