fixed #4: backup user for mysql client moved to mysql_backup directive

--- a/mariadb/compose/conf/credentials.cnf
+++ b/mariadb/compose/conf/credentials.cnf
@@ -9,14 +9,6 @@ password        = 'Mt2(8eH5232Nb$3dw8s'
 user            = backup
 password        = 'Mt2(8eH5232Nb$3dw8s'
 
-[mysql]
-user            = backup
-password        = 'Mt2(8eH5232Nb$3dw8s'
-
-[mysqladmin]
-user            = backup
-password        = 'Mt2(8eH5232Nb$3dw8s'
-
-[client]
+[mysql_backup]
 user            = backup
 password        = 'Mt2(8eH5232Nb$3dw8s'
