improved comments; changed default collation

--- a/mariadb/compose/conf/my.cnf
+++ b/mariadb/compose/conf/my.cnf
@@ -14,7 +14,7 @@ max_connections         = 750
 # Binary logging and replication
 log_bin                 = binlog
 log_slave_updates       = ON
-server_id               = 1000 # same on all Galera nodes
+server_id               = 1000 # same on all Galera nodes in the same segment
 expire_logs_days        = 7
 gtid_domain_id          = 1000
 gtid_strict_mode        = ON
@@ -37,10 +37,10 @@ innodb_write_io_threads         = 4    # CPU dependent
 # Galera
 wsrep_on                        = ON
 wsrep_provider                  = /usr/lib/galera/libgalera_smm.so
-wsrep_provider_options          = "gcache.size=2G;gmcast.segment=0"
+wsrep_provider_options          = "gcache.size=2G;gmcast.segment=0" 1000 # gmcast.segment same on all Galera nodes in the same segment
 wsrep_cluster_name              = "Nextcloud_MariaDB_Cluster"
 wsrep_sst_method                = mariabackup
 wsrep_slave_threads             = 4    # CPU dependent
 wsrep_gtid_mode                 = ON
-wsrep_gtid_domain_id            = 1000 # same on all Galera nodes
+wsrep_gtid_domain_id            = 1000 # same on all Galera nodes in the same segment
 wsrep_log_conflicts             = ON
