fixed typo and structure

--- a/mariadb/compose/conf/my.cnf
+++ b/mariadb/compose/conf/my.cnf
@@ -4,7 +4,7 @@
 default_storage_engine  = InnoDB
 binlog_format           = ROW
 character_set_server    = utf8mb4
-collation_server        = utf8mb4_unicode_ci
+collation_server        = utf8mb4_general_ci
 skip_name_resolve       = ON
 skip_external_locking   = ON
 local_infile            = 0
@@ -37,7 +37,7 @@ innodb_write_io_threads         = 4    # CPU dependent
 # Galera
 wsrep_on                        = ON
 wsrep_provider                  = /usr/lib/galera/libgalera_smm.so
-wsrep_provider_options          = "gcache.size=2G;gmcast.segment=0" 1000 # gmcast.segment same on all Galera nodes in the same segment
+wsrep_provider_options          = "gcache.size=2G;gmcast.segment=0" # gmcast.segment same on all Galera nodes in the same segment
 wsrep_cluster_name              = "Nextcloud_MariaDB_Cluster"
 wsrep_sst_method                = mariabackup
 wsrep_slave_threads             = 4    # CPU dependent
