change service name to nextcloud-proxysql

--- a/proxysql/compose/docker-compose.yaml
+++ b/proxysql/compose/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-  proxysql:
+  nextcloud-proxysql:
     image: safespring/nextcloud-proxysql:2.0.14-1
     environment:
       INITIALIZE: 1
