added volume map for conf/my.cnf

--- a/proxysql/compose/docker-compose.yaml
+++ b/proxysql/compose/docker-compose.yaml
@@ -8,3 +8,4 @@ services:
     restart: unless-stopped
     volumes:
       - ${PWD}/proxysql.cnf:/etc/proxysql.cnf
+      - ${PWD}/conf:/etc/mysql/conf.d/
