--- a/mariadb/compose/docker-compose.yaml
+++ b/mariadb/compose/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   # MariaDB Cluster
   nextcloud-mariadb:
-    image: safespring/nextcloud-mariadb:10.5.6-2
+    image: safespring/nextcloud-mariadb:10.6.2-focal
     environment:
       MYSQL_ROOT_PASSWORD: M5H&%@-0BgY3312Nws2g
       BOOTSTRAP: 0
@@ -19,7 +19,7 @@ services:
         soft: 256000
         hard: 256000
     command:
-      - --wsrep_cluster_address=gcomm://89.45.237.193,89.45.237.218,89.45.237.133
+      - --wsrep_cluster_address=gcomm://89.46.21.224,89.46.21.252,89.46.20.128
 
   # Prometheus agent
   mariadb-exporter:
