--- a/mariadb/compose/conf/my.cnf
+++ b/mariadb/compose/conf/my.cnf
@@ -32,6 +32,7 @@ transaction_isolation           = 'READ-COMMITTED'
 innodb_io_capacity              = 2000 # IOPS dependent
 innodb_io_capacity_max          = 4000 # IOPS dependent
 innodb_read_io_threads          = 4    # CPU dependent
+innodb_read_only_compressed     = OFF
 innodb_write_io_threads         = 4    # CPU dependent
 
 # Galera
